Fix z-index for channel search

--- a/app/assets/stylesheets/channel-search.css.scss
+++ b/app/assets/stylesheets/channel-search.css.scss
@@ -20,6 +20,7 @@ $large-screen: "only screen and (min-width: 1200px)";
   text-align: left;
   border: 1px solid #ccc;
   overflow-y: auto;
+  z-index: 10;
 
   .search-field:focus {
     outline-width: 0;
